Catch exceptions thrown in handlers and properties